Fixed involved section white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,9 @@
 
 .involved-section .content {
     position: relative;
-    z-index: 10;
+    width: 50%;
+    padding: 55px 25px;
+    z-index: 3;
     color: var(--white-color);
 }
 
@@ -157,7 +159,7 @@
     top: 0;
     left: -10%;
     padding-right: 5%;
-    z-index: 5;
+    z-index: 2;
     background: var(--orange-color);
     -o-transform: skew(-15deg);
     -moz-transform: skew(-15deg);
